feat: Добавить статистику по PR и Users (количество ревьюеров на разных PR и количество PR у различных пользователей)
