# internal/controller/handlers/router.go
@@ -1,8 +1,6 @@
 package handlers
 
 import (
-	"net/http"
-
 	"github.com/Leganyst/avitoTrainee/internal/service"
 	"github.com/gin-gonic/gin"
 )
@@ -12,16 +10,16 @@ func RegisterRoutes(r *gin.Engine,
 	teamSvc service.TeamService,
 	userSvc service.UserService,
 	prSvc service.PRService,
+	statsSvc service.StatsService,
 ) {
 	r.Use(requestLoggerMiddleware())
 
-	r.GET("/health", func(c *gin.Context) {
-		c.JSON(http.StatusOK, gin.H{"status": "OK"})
-	})
+	r.GET("/healthcheck", healthCheckHandler)
 
 	api := r.Group("/api")
 
 	registerTeamRoutes(api, teamSvc)
 	registerUserRoutes(api, userSvc)
 	registerPRRoutes(api, prSvc)
+	registerStatsRoutes(api, statsSvc)
 }
